--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -13,4 +13,6 @@ bEnableSnapLayers=True
 SnapAxis=Y
 +SnapLayers=(Name="Foreground",Depth=100.000000)
 +SnapLayers=(Name="Default",Depth=0.000000)
++SnapLayers=(Name="Default",Depth=0.000000)
 +SnapLayers=(Name="Background",Depth=-400.000000)
+
