Modification des layers

--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -13,6 +13,8 @@ bEnableSnapLayers=True
 SnapAxis=Y
 +SnapLayers=(Name="Foreground",Depth=100.000000)
 +SnapLayers=(Name="Default",Depth=0.000000)
-+SnapLayers=(Name="Default",Depth=0.000000)
++SnapLayers=(Name="Overlayer",Depth=-100.000000)
++SnapLayers=(Name="Layer",Depth=-200.000000)
++SnapLayers=(Name="Underlayer",Depth=-300.000000)
 +SnapLayers=(Name="Background",Depth=-400.000000)
 
